--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title>Hello Cam</title>
 </head>
 <body>
-<h1>Hello Coursera. This is hard. yet easier than psychology</h1>
+<h1>Hello Cam. How are you.</h1>
 </body>
 </html>
